[project]
name = "chainstream"
version = "1.0.1"
description = "Chain I/O streams together"
license = {text = "CC-BY-SA 4.0"}
authors = [
    {name = "Reuben Thomas", email = "rrt@c3d.org"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.urls]
homepage = "https://github.com/rrthomas/chainstream"
